--- a/redis-distributedlock-spring-boot-starter-parent/redis-distributedlock-spring-boot-autoconfig/pom.xml
+++ b/redis-distributedlock-spring-boot-starter-parent/redis-distributedlock-spring-boot-autoconfig/pom.xml
@@ -53,6 +53,11 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.cayzlh</groupId>
+      <artifactId>commons</artifactId>
+    </dependency>
   </dependencies>
 
 
