--- a/zk-distributedlock-spring-boot-starter-parent/zk-distributedlock-spring-boot-autoconfig/pom.xml
+++ b/zk-distributedlock-spring-boot-starter-parent/zk-distributedlock-spring-boot-autoconfig/pom.xml
@@ -55,6 +55,11 @@
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
+
+    <dependency>
+      <groupId>com.cayzlh</groupId>
+      <artifactId>commons</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
