--- a/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/pom.xml
+++ b/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/pom.xml
@@ -30,6 +30,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
@@ -57,6 +62,7 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+
   </dependencies>
 
 </project>
