--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
       <dependency>
         <groupId>com.cayzlh</groupId>
         <artifactId>commons</artifactId>
-        <version>${version}</version>
+        <version>${project.version}</version>
       </dependency>
 
 
