--- a/redis-distributedlock-spring-boot-starter-parent/redis-distributedlock-spring-boot-sample/pom.xml
+++ b/redis-distributedlock-spring-boot-starter-parent/redis-distributedlock-spring-boot-sample/pom.xml
@@ -25,6 +25,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>com.cayzlh</groupId>
       <artifactId>redis-distributedlock-spring-boot-starter</artifactId>
     </dependency>
