--- a/zk-distributedlock-spring-boot-starter-parent/pom.xml
+++ b/zk-distributedlock-spring-boot-starter-parent/pom.xml
@@ -24,13 +24,13 @@
       <dependency>
         <groupId>com.cayzlh</groupId>
         <artifactId>zk-distributedlock-spring-boot-autoconfig</artifactId>
-        <version>${version}</version>
+        <version>${project.version}</version>
       </dependency>
 
       <dependency>
         <groupId>com.cayzlh</groupId>
         <artifactId>zk-distributedlock-spring-boot-starter</artifactId>
-        <version>${version}</version>
+        <version>${project.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
