--- a/redis-distributedlock-spring-boot-starter-parent/redis-distributedlock-spring-boot-autoconfig/pom.xml
+++ b/redis-distributedlock-spring-boot-starter-parent/redis-distributedlock-spring-boot-autoconfig/pom.xml
@@ -57,6 +57,7 @@
     <dependency>
       <groupId>com.cayzlh</groupId>
       <artifactId>commons</artifactId>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
