--- a/zk-distributedlock-spring-boot-starter-parent/zk-distributedlock-spring-boot-autoconfig/pom.xml
+++ b/zk-distributedlock-spring-boot-starter-parent/zk-distributedlock-spring-boot-autoconfig/pom.xml
@@ -59,6 +59,7 @@
     <dependency>
       <groupId>com.cayzlh</groupId>
       <artifactId>commons</artifactId>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
