--- a/base-spring-boot-starter-parent/base-spring-boot-autoconfig/pom.xml
+++ b/base-spring-boot-starter-parent/base-spring-boot-autoconfig/pom.xml
@@ -60,6 +60,11 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.cayzlh</groupId>
+      <artifactId>commons</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
