--- a/pom.xml
+++ b/pom.xml
@@ -214,7 +214,7 @@
         <artifactId>site-maven-plugin</artifactId>
         <version>0.12</version>
         <configuration>
-          <message>🐳 deploy maven artifacts for ${project.artifactId}, version: ${project.version}</message>
+          <message>🐳 deploy maven artifacts, version: ${project.version}</message>
           <noJekyll>true</noJekyll>
           <outputDirectory>${project.build.directory}/maven-repo</outputDirectory><!--本地jar地址-->
           <branch>refs/heads/master</branch><!--分支的名称-->
