🐳 移除多余的包

--- a/base-spring-boot-starter-parent/base-spring-boot-autoconfig/pom.xml
+++ b/base-spring-boot-starter-parent/base-spring-boot-autoconfig/pom.xml
@@ -52,8 +52,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.tomcat.embed</groupId>
-      <artifactId>tomcat-embed-core</artifactId>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
