--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,12 @@
       </dependency>
 
       <dependency>
+        <groupId>org.apache.shiro</groupId>
+        <artifactId>shiro-core</artifactId>
+        <version>1.5.2</version>
+      </dependency>
+
+      <dependency>
         <groupId>com.dyuproject.protostuff</groupId>
         <artifactId>protostuff-core</artifactId>
         <version>1.1.5</version>
@@ -167,11 +173,17 @@
       </dependency>
 
       <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>4.0.1</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
         <groupId>com.cayzlh</groupId>
         <artifactId>commons</artifactId>
         <version>${project.version}</version>
       </dependency>
-
 
     </dependencies>
   </dependencyManagement>
