--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,11 @@
     <springboot.version>2.2.1.RELEASE</springboot.version>
     <hutool.version>5.1.1</hutool.version>
     <curator.version>4.2.0</curator.version>
-    <jwt.version>0.10.7</jwt.version>
     <guava.version>28.2-jre</guava.version>
     <github.global.server>github</github.global.server>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jwt.version>3.10.2</jwt.version>
+    <shiro.version>1.5.2</shiro.version>
   </properties>
 
   <dependencyManagement>
@@ -107,6 +108,12 @@
       </dependency>
 
       <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-collections4</artifactId>
+        <version>4.4</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.apache.zookeeper</groupId>
         <artifactId>zookeeper</artifactId>
         <version>3.5.6</version>
@@ -137,27 +144,27 @@
       </dependency>
 
       <dependency>
-        <groupId>io.jsonwebtoken</groupId>
-        <artifactId>jjwt-api</artifactId>
-        <version>${jwt.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>io.jsonwebtoken</groupId>
-        <artifactId>jjwt-impl</artifactId>
-        <version>${jwt.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>io.jsonwebtoken</groupId>
-        <artifactId>jjwt-jackson</artifactId>
+        <groupId>com.auth0</groupId>
+        <artifactId>java-jwt</artifactId>
         <version>${jwt.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.apache.shiro</groupId>
         <artifactId>shiro-core</artifactId>
-        <version>1.5.2</version>
+        <version>${shiro.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.shiro</groupId>
+        <artifactId>shiro-web</artifactId>
+        <version>${shiro.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.shiro</groupId>
+        <artifactId>shiro-spring</artifactId>
+        <version>${shiro.version}</version>
       </dependency>
 
       <dependency>
@@ -177,6 +184,18 @@
         <artifactId>javax.servlet-api</artifactId>
         <version>4.0.1</version>
         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.mapstruct</groupId>
+        <artifactId>mapstruct</artifactId>
+        <version>1.3.1.Final</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.ini4j</groupId>
+        <artifactId>ini4j</artifactId>
+        <version>0.5.4</version>
       </dependency>
 
       <dependency>
