--- a/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/pom.xml
+++ b/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/pom.xml
@@ -30,6 +30,11 @@
     </dependency>
 
     <dependency>
+      <groupId>com.cayzlh</groupId>
+      <artifactId>base-spring-boot-starter</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
