--- a/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/pom.xml
+++ b/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/pom.xml
@@ -68,6 +68,17 @@
       <artifactId>commons-lang3</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
