--- a/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/src/main/resources/application.yml
+++ b/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/src/main/resources/application.yml
@@ -8,3 +8,14 @@ cayzlh:
       redis-check: true
       single-login: true
       salt-check: true
+    shiro:
+      enable: true
+      anon:
+        - /app/login
+spring:
+  redis:
+    host: localhost
+    port: 6379
+    database: 1
+    password:
+    timeout: 180000
