--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jwt.version>3.10.2</jwt.version>
     <shiro.version>1.5.2</shiro.version>
+    <mapstruct.version>1.3.1.Final</mapstruct.version>
+    <lombok.version>1.18.10</lombok.version>
   </properties>
 
   <dependencyManagement>
@@ -74,7 +76,7 @@
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <optional>true</optional>
-        <version>1.18.10</version>
+        <version>${lombok.version}</version>
       </dependency>
 
       <dependency>
@@ -87,12 +89,6 @@
         <groupId>cn.hutool</groupId>
         <artifactId>hutool-all</artifactId>
         <version>${hutool.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-core</artifactId>
-        <version>[9.0.30,)</version>
       </dependency>
 
       <dependency>
@@ -189,7 +185,7 @@
       <dependency>
         <groupId>org.mapstruct</groupId>
         <artifactId>mapstruct</artifactId>
-        <version>1.3.1.Final</version>
+        <version>${mapstruct.version}</version>
       </dependency>
 
       <dependency>
@@ -216,11 +212,23 @@
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
+        <version>3.8.1</version>
         <configuration>
           <encoding>UTF-8</encoding>
           <source>${java.version}</source>
           <target>${java.version}</target>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${mapstruct.version}</version>
+            </path>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
       <plugin>
