--- a/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/src/main/resources/application.yml
+++ b/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/src/main/resources/application.yml
@@ -11,7 +11,7 @@ cayzlh:
     shiro:
       enable: true
       anon:
-        - /app/login
+        - /app/login, /app/logout
 spring:
   redis:
     host: localhost
