--- a/pom.xml
+++ b/pom.xml
@@ -212,7 +212,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.5.1</version>
         <configuration>
           <encoding>UTF-8</encoding>
           <source>${java.version}</source>
@@ -227,6 +227,11 @@
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
               <version>${lombok.version}</version>
+            </path>
+            <path>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-configuration-processor</artifactId>
+              <version>${springboot.version}</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
