--- a/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/src/main/resources/application.yml
+++ b/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/src/main/resources/application.yml
@@ -12,6 +12,9 @@ cayzlh:
       enable: true
       anon:
         - /app/login, /app/logout
+    base:
+      log:
+        level: INFO
 spring:
   redis:
     host: localhost
