--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -16,7 +16,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
-      <optional>true</optional>
     </dependency>
 
     <dependency>
@@ -64,6 +63,11 @@
     <dependency>
       <groupId>org.ini4j</groupId>
       <artifactId>ini4j</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.fusesource.jansi</groupId>
+      <artifactId>jansi</artifactId>
     </dependency>
 
   </dependencies>
