--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,9 @@
     <jwt.version>3.10.2</jwt.version>
     <shiro.version>1.5.2</shiro.version>
     <mapstruct.version>1.3.1.Final</mapstruct.version>
+    <fastjson.version>1.2.68</fastjson.version>
     <lombok.version>1.18.10</lombok.version>
+    <jackson.version>2.10.3</jackson.version>
   </properties>
 
   <dependencyManagement>
@@ -192,6 +194,36 @@
         <groupId>org.ini4j</groupId>
         <artifactId>ini4j</artifactId>
         <version>0.5.4</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>${fastjson.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.fusesource.jansi</groupId>
+        <artifactId>jansi</artifactId>
+        <version>1.18</version>
       </dependency>
 
       <dependency>
