--- a/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/src/main/resources/application.yml
+++ b/jwt-spring-boot-starter-parent/jwt-spring-boot-sample/src/main/resources/application.yml
@@ -15,6 +15,8 @@ cayzlh:
     base:
       log:
         level: INFO
+        path: logs
+        enable: true
 spring:
   redis:
     host: localhost
