--- a/base-spring-boot-starter-parent/base-spring-boot-sample/src/main/resources/application.yml
+++ b/base-spring-boot-starter-parent/base-spring-boot-sample/src/main/resources/application.yml
@@ -7,3 +7,7 @@ cayzlh:
         level: INFO
         path: logs
         enable: true
+        exclude-paths: /xxx
+        request-log-format: true
+        response-log-format: true
+      convertable: true
