--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
     <fastjson.version>1.2.68</fastjson.version>
     <lombok.version>1.18.10</lombok.version>
     <jackson.version>2.10.3</jackson.version>
+    <swagger2.version>2.9.2</swagger2.version>
+    <knife4j.version>2.0.2</knife4j.version>
   </properties>
 
   <dependencyManagement>
@@ -224,6 +226,24 @@
         <groupId>org.fusesource.jansi</groupId>
         <artifactId>jansi</artifactId>
         <version>1.18</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
+        <version>${swagger2.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+        <version>${swagger2.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.github.xiaoymin</groupId>
+        <artifactId>knife4j-spring-boot-starter</artifactId>
+        <version>${knife4j.version}</version>
       </dependency>
 
       <dependency>
