--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,12 @@
       </dependency>
 
       <dependency>
+        <groupId>com.github.xiaoymin</groupId>
+        <artifactId>knife4j-spring-boot-starter</artifactId>
+        <version>${knife4j.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>com.cayzlh</groupId>
         <artifactId>commons</artifactId>
         <version>${project.version}</version>
