--- a/base-spring-boot-starter-parent/base-spring-boot-autoconfig/pom.xml
+++ b/base-spring-boot-starter-parent/base-spring-boot-autoconfig/pom.xml
@@ -105,6 +105,11 @@
     </dependency>
 
     <dependency>
+      <groupId>com.github.xiaoymin</groupId>
+      <artifactId>knife4j-spring-boot-starter</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
     </dependency>
