--- a/pom.xml
+++ b/pom.xml
@@ -26,15 +26,16 @@
     <springboot.version>2.2.1.RELEASE</springboot.version>
     <hutool.version>5.1.1</hutool.version>
     <curator.version>4.2.0</curator.version>
-    <guava.version>28.2-jre</guava.version>
+    <guava.version>[30.0-jre,)</guava.version>
     <github.global.server>github</github.global.server>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jwt.version>3.10.2</jwt.version>
-    <shiro.version>1.5.2</shiro.version>
+    <shiro.version>[1.6.0,)</shiro.version>
+    <shiro-spring.version>[1.7.0,)</shiro-spring.version>
     <mapstruct.version>1.3.1.Final</mapstruct.version>
     <fastjson.version>1.2.68</fastjson.version>
     <lombok.version>1.18.10</lombok.version>
-    <jackson.version>2.10.3</jackson.version>
+    <jackson.version>[2.10.5.1,)</jackson.version>
     <swagger2.version>2.9.2</swagger2.version>
     <knife4j.version>2.0.2</knife4j.version>
   </properties>
@@ -164,7 +165,7 @@
       <dependency>
         <groupId>org.apache.shiro</groupId>
         <artifactId>shiro-spring</artifactId>
-        <version>${shiro.version}</version>
+        <version>${shiro-spring.version}</version>
       </dependency>
 
       <dependency>
