feature(1.2.0): 调整目录结构，准备新增elasticsearch

--- a/elasticsearch-spring-boot/elasticsearch-spring-boot-starter/pom.xml
+++ b/elasticsearch-spring-boot/elasticsearch-spring-boot-starter/pom.xml
@@ -18,6 +18,13 @@
 
   <artifactId>elasticsearch-spring-boot-starter</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>com.cayzlh</groupId>
+      <artifactId>elasticsearch-spring-boot-autoconfig</artifactId>
+    </dependency>
+  </dependencies>
+
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
