--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
     <github.global.server>github</github.global.server>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jwt.version>3.10.2</jwt.version>
-    <shiro.version>[1.6.0,)</shiro.version>
-    <shiro-spring.version>[1.7.0,)</shiro-spring.version>
+    <shiro.version>1.6.0</shiro.version>
+    <shiro-spring.version>1.7.0</shiro-spring.version>
     <mapstruct.version>1.3.1.Final</mapstruct.version>
     <fastjson.version>1.2.68</fastjson.version>
     <lombok.version>1.18.10</lombok.version>
