--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.cayzlh</groupId>
   <artifactId>cayzlh-starters</artifactId>
-  <version>1.0.2</version>
+  <version>1.2.3</version>
 
   <packaging>pom</packaging>
   <name>starters</name>
@@ -35,7 +35,7 @@
     <mapstruct.version>1.3.1.Final</mapstruct.version>
     <fastjson.version>1.2.68</fastjson.version>
     <lombok.version>1.18.10</lombok.version>
-    <jackson.version>[2.10.5.1,)</jackson.version>
+    <jackson.version>2.10.5</jackson.version>
     <swagger2.version>2.9.2</swagger2.version>
     <knife4j.version>2.0.2</knife4j.version>
   </properties>
